tests/ui/rust-2024/unsafe-extern-blocks/safe-unsafe-on-unadorned-extern-block.edition2021.stderr
error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:10:5
   |
LL | extern "C" {
   | ---------- help: add unsafe to this `extern` block
LL |
LL |     safe static TEST1: i32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/safe-unsafe-on-unadorned-extern-block.rs:12:5
   |
LL | extern "C" {
   | ---------- help: add unsafe to this `extern` block
...
LL |     safe fn test1(i: i32);
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

